--- a/public/style/banner.css
+++ b/public/style/banner.css
@@ -1,6 +1,6 @@
 #download-banner{
     background-color: grey;
-    background-image: url('./img/banner.jpg');
+    background-image: url('../img/banner.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
