--- a/views/index.html
+++ b/views/index.html
@@ -7,22 +7,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" type="text/css" href="../public/style/basicCSS.css">
-	<link rel="stylesheet" type="text/css" href="../public/style/icons.css">
-	<link rel="stylesheet" type="text/css" href="../public/navBar.css">
-	<link rel="stylesheet" type="text/css" href="../public/header.css">
-	<link rel="stylesheet" type="text/css" href="../public/work.css">
-	<link rel="stylesheet" type="text/css" href="../public/services.css">
-	<link rel="stylesheet" type="text/css" href="../public/contact.css">
-	<link rel="stylesheet" type="text/css" href="../public/banner.css">
-	<link rel="stylesheet" type="text/css" href="../public/slides.css">
-	<link rel="stylesheet" type="text/css" href="../public/mobile.css">
+	<title>Landign Page</title>
+
+	<link rel="stylesheet" type="text/css" href="/public/style/basicCSS.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/icons.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/navBar.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/header.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/work.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/services.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/contact.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/banner.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/slides.css">
+	<link rel="stylesheet" type="text/css" href="/public/style/mobile.css">
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-	<script src="../public/effects.js"></script>
+	<script src="/public/script/effects.js"></script>
 </head>
 
 <body>
@@ -30,7 +32,7 @@
 	<section id="nav-bar">
 		<!-- Fist column which will contain the logo-->
 		<div class="col-1">
-			<img src="../public/img/white_logo.png" class="logo">
+			<img src="/public/img/white_logo.png" class="logo">
 		</div>
 		<!-- End first column-->
 
@@ -155,7 +157,7 @@
 		<!-- content section-->
 		<section class="sub-section-2">
 			<div class="col-1">
-				<img src="../public/img/services_bg.png">
+				<img src="/public/img/services_bg.png">
 			</div>
 			<div class="col-2">
 				<div class="row-1 icon-box-2">
@@ -209,7 +211,7 @@
 				<!-- A single slide that contain the infos-->
 				<div class="slides fade">
 					<!--<span class="slide-index hidden-slide">1/3</span>-->
-					<img src="./public/img/profil-01.jpg" class="person-picture">
+					<img src="../public/img/profil-01.jpg" class="person-picture">
 					<p class="name">tony stark</p>
 					<p class="title">sr engineer</p>
 					<p class="comment">
@@ -224,7 +226,7 @@
 				<!-- A single slide that contain the infos-->
 				<div class="slides hidden-slide fade">
 					<!--<span class="slide-index">2/3</span>-->
-					<img src="./public/img/profil-02.jpg" class="person-picture">
+					<img src="../public/img/profil-02.jpg" class="person-picture">
 					<p class="name">nicola tesla</p>
 					<p class="title">designer</p>
 					<p class="comment">
@@ -238,7 +240,7 @@
 				<!-- A single slide that contain the infos-->
 				<div class="slides hidden-slide fade">
 					<!--<span class="slide-index">3/3</span>-->
-					<img src="./public/img/profil-03.jpg" class="person-picture">
+					<img src="../public/img/profil-03.jpg" class="person-picture">
 					<p class="name">elon musk</p>
 					<p class="title">developer</p>
 					<p class="comment">
@@ -281,7 +283,7 @@
 		<section class="sub-section-2">
 			<!-- start icon box -->
 			<div class="icon-box shadow">
-				<img src="./public/img/profil-01.jpg" class="person">
+				<img src="../public/img/profil-01.jpg" class="person">
 				<p class="title">unique design</p>
 				<p class="sub-title">web developer</p>
 				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -297,7 +299,7 @@
 
 			<!-- start icon box -->
 			<div class="icon-box shadow">
-				<img src="./public/img/profil-02.jpg" class="person">
+				<img src="../public/img/profil-02.jpg" class="person">
 				<p class="title">unique design</p>
 				<p class="sub-title">web developer</p>
 				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -313,7 +315,7 @@
 
 			<!-- start icon box -->
 			<div class="icon-box shadow">
-				<img src="./public/img/profil-03.jpg" class="person">
+				<img src="../public/img/profil-03.jpg" class="person">
 				<p class="title">unique design</p>
 				<p class="sub-title">web developer</p>
 				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -329,7 +331,7 @@
 
 			<!-- start icon box -->
 			<div class="icon-box shadow">
-				<img src="./public/img/profil-03.jpg" class="person">
+				<img src="../public/img/profil-03.jpg" class="person">
 				<p class="title">unique design</p>
 				<p class="sub-title">web developer</p>
 				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -345,7 +347,7 @@
 
 			<!-- start icon box -->
 			<div class="icon-box shadow">
-				<img src="./public/img/profil-03.jpg" class="person">
+				<img src="../public/img/profil-03.jpg" class="person">
 				<p class="title">unique design</p>
 				<p class="sub-title">web developer</p>
 				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
