--- a/public/style/basicCSS.css
+++ b/public/style/basicCSS.css
@@ -20,7 +20,7 @@
 }
 
 body{
-    background-color: black;
+    background-color: white;
 }
 
 input, textarea{
@@ -88,6 +88,7 @@ footer >div >a{
     text-transform: uppercase;
     letter-spacing: 2.1px;
     text-decoration: none;
+    color : white;
 }
 
 footer >div >a:hover{
