--- a/public/style/header.css
+++ b/public/style/header.css
@@ -1,7 +1,7 @@
 #header {
     height: 100vh;
     background-color: grey;
-    background-image: radial-gradient( #4922b4, #c04327),url('./img/hero_background_3.jpg');
+    background-image: radial-gradient( #4922b4, #c04327),url('../img/hero_background_3.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
