--- a/public/style/slides.css
+++ b/public/style/slides.css
@@ -6,93 +6,45 @@
     background-position: bottom;
     background-blend-mode: darken;
     background-size: cover;
-}
 
-.slide-show{
-    text-align: center;
-    padding: 20px;
+    height: 100vh;
 
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: 80% 10% 10%;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-
-}
-
-.slide-show > .navigation-2 {
-    grid-column: 2/3;
-    grid-row: 3/4;
-}
-
-.slide-show > .navigation-2 > .dot{
-    color: transparent;
-    border: solid 2px white;
-    border-radius: 100%;
-    font-size: 13px;
-}
-
-.slide-show > .navigation-2 > .dot:hover{
-    cursor: pointer;
-
-}
-
-.slide-show > .slides {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    color :white;
-    display: flex;
+    display: flex; 
     flex-direction: column;
-    /*align flex items along the main axis*/
-    justify-content: center;
-    /*align flex items along the cross axis*/
     align-items: center;
-    
-    transition-duration: 2s;
 }
 
-.slide-show > .slides > .person-picture{
+.carousel-inner > .item {
+    text-align: center;
+    max-width: var(--section_header_max_width);
+    display: flex; 
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.carousel-inner > .item > .person-picture{
     height: 125px;
     width: 125px;
     border: solid var(--third_color) 8px;
     border-radius: 50%;
-
 }
 
-.slide-show > .slides > .name{
+.carousel-inner > .item > .name{
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 2.2px;
     text-transform: capitalize;
 }
 
-.slide-show > .slides > .title{
+.carousel-inner > .item > .title{
     font-size: 18px;
     letter-spacing: 1.2px;
     text-transform: capitalize;
 }
 
-.slide-show > .slides > .comment{
+.carousel-inner > .item > .comment{
     font-size: 20px;
-   
     letter-spacing: 1.2px;
     text-transform: capitalize;
-}
-
-.slide-show > .slides > .slide-index{
-  align-self: flex-start;
-  padding-left: 10px;
-}
-
-.sub-section-2 > .slide-show > .hidden-slide{
-    display: none;
-}
-
-.sub-section-2 > .slide-show > .navigation-2 > .selected{
-    font-size: 16px;
-}
-
-.fade{
-    animation-name: fade;
-    animation-duration: 2s;
 }
