--- a/views/index.html
+++ b/views/index.html
@@ -17,11 +17,9 @@
 	<link rel="stylesheet" type="text/css" href="/public/style/contact.css">
 	<link rel="stylesheet" type="text/css" href="/public/style/banner.css">
 	<link rel="stylesheet" type="text/css" href="/public/style/slides.css">
-	<link rel="stylesheet" type="text/css" href="/public/style/mobile.css">
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
 	<!-- Adding emailJs-->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 	<script src="/public/script/contact.js"></script>
@@ -79,8 +77,8 @@
 				eget, aliquam vel lorem.
 			</p>
 			<div class="sub-section">
-				<a class="link-button-1 button" href="#">get started</a>
-				<a class="link-button-2 button" href="#">buy now</a>
+				<a class="btn btn-default" href="#" role="button">get started</a>
+				<a class="btn btn-danger" href="#" role="button">buy now</a>
 			</div>
 		</div>
 		<!-- End First row-->
@@ -385,9 +383,9 @@
 		</section>
 		<section class="sub-section-2">
 			<div class="col-2">
-				<a href="#" class="icon-button button"><i class="icon-appleinc"></i>app store</a>
-				<a href="#" class="icon-button button"><i class="icon-android"></i>play store</a>
-				<a href="#" class="icon-button button"><i class="icon-windows8"></i>windows</a>
+				<a href="#" class="icon-button btn"><i class="icon-appleinc"></i>app store</a>
+				<a href="#" class="icon-button btn"><i class="icon-android"></i>play store</a>
+				<a href="#" class="icon-button btn"><i class="icon-windows8"></i>windows</a>
 			</div>
 		</section>
 	</section>
@@ -421,7 +419,7 @@
 					<textarea id="email-body" name="email-body" rows="4" col="50" required></textarea>
 					<hr class="space">
 					<p id="message"></p>
-					<input type="submit" class="submit-button" value="Send" />
+					<input type="submit" class="btn btn-primary submit-button" value="Send" />
 				</form>
 			</div>
 			<div class="col-2">
