--- a/public/style/header.css
+++ b/public/style/header.css
@@ -52,7 +52,19 @@
 }
 
 
-
+.btn{
+    width: 200px;
+    font-weight: bold !important;
+    font-size: medium !important;
+    vertical-align:middle !important;
+    height: 50px;
+    /* Advanced */
+    padding: 10px 20px 10px 20px !important;
+    margin: 10px 10px 10px 10px;
+}
+.btn-default{
+    color: var(--first_color)!important;
+}
 .button{
     /* General */
     text-decoration: none;
@@ -61,6 +73,7 @@
     border: solid 2px;
     font-weight: bold;
     width: 200px;
+    height: 50px;
     /* Advanced */
     padding: 10px 20px 10px 20px;
     margin: 10px 10px 10px 10px;
